[project]
name = "detect-and-count-objects-in-polygon-zone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supervision>=0.25.1",
    "ultralytics",
    "pillow",
    "torch>=2.6.0+cu126",
    "torchvision>=0.21.0+cu126",
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126"}
]
torchvision = [
    {index = "pytorch-cu126"}
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
