[project]
name = "ZoneVision"
version = "0.1.0"
description = "Detect objects within a custom zone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supervision>=0.25.1",
    "ultralytics",
    "pillow",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
edit-video = [
    "moviepy>=2.1.2"
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126"}
]
torchvision = [
    {index = "pytorch-cu126"}
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
